# fastCVdemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/apis/imageProcessing/: ImgDiff.h
app/src/main/cpp/include/apis/imageTransformation/: ScaleDownMN.h
app/src/main/cpp/include/utils/: Android.mk  FastCVSampleRenderer.h
app/src/main/cpp/source/apis/: About.cpp  CMakeLists.txt
app/src/main/cpp/source/apis/featureDetection/: Corner.cpp
app/src/main/cpp/source/apis/imageProcessing/: Filter.cpp  FilterCorr.cpp  ImageGradient.cpp  ImgDiff.cpp
app/src/main/cpp/source/apis/imageTransformation/: Affine.cpp  Rotate.cpp  Scale.cpp  ScaleDownMN.cpp  Warp.cpp
app/src/main/cpp/source/apis/preprocessing/: PreProcessing.cpp
app/src/main/cpp/source/utils/: CameraRendererRGB565GL2.cpp  FastCVSampleRenderer.cpp  FastCVUtil.cpp
app/src/main/java/com/qualcomm/fastcvdemo/apis/: About.java  SplashScreen.java  SplashScreenView.java
app/src/main/java/com/qualcomm/fastcvdemo/base/: GraphicalActivity.java
app/src/main/java/com/qualcomm/fastcvdemo/utils/: CameraSurface.java  FastCVSampleRenderer.java
app/src/main/res/layout/: about.xml  imagegradient.xml  imgdiff.xml  main.xml  scaledown_mn.xml
app/src/main/res/menu/: affinemenu.xml  filtercorrmenu.xml  filtermenu.xml  imagegradientmenu.xml  preprocessing.xml  rotatemenu.xml  scaledown_mn_menu.xml  scalemenu.xml  splashmenu.xml  warpmenu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: cornerpref.xml  styles.xml
(+4 files in other folders)
